--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.11.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.19.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.7",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "typescript": "^4.3.2"
   }
 }
